--- a/static/popup.html
+++ b/static/popup.html
@@ -1,19 +1,1 @@
-<!-- <div>Extension made by: <a href="https://github.com/fernandomireles" title="Fernando Mireles">Fernando Mireles</a>.</div>
--->
-
-<!doctype html>
-
-<head>
-	<title>test1</title>
-
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="popup.css">
-	<script src="options.js"></script>
-</head>
-
-<body>
-    <div class="header">
-	<h1 align="center">Test</h1>
-	</div>
-	<div id="options">
-</body>
+<div>Extension made by: <a href="https://github.com/fernandomireles" title="Fernando Mireles">Fernando Mireles</a>.</div> 
